--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 
-# Postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/task?autoReconnect=true
-spring.datasource.username=postgres
-spring.datasource.password=data1234
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#JPA
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.generate-ddl=true
-spring.jpa.properties.show-sql=true
+## Postgresql
+#spring.datasource.url=jdbc:postgresql://localhost:5432/task?autoReconnect=true
+#spring.datasource.username=postgres
+#spring.datasource.password=data1234
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+##JPA
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.generate-ddl=true
+#spring.jpa.properties.show-sql=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#??? swagger?? ? nullpointException? ???
