jpa orm 적용, mariadb 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,19 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=data1234
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-##JPA
-#spring.jpa.hibernate.ddl-auto=update
+
+##Maria DB ?????? ??
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/region
+spring.datasource.username=root
+spring.datasource.password=data1234
+# ???? sha ????? ??... ??? 
+
+##JPA ??
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.generate-ddl=true
-#spring.jpa.properties.show-sql=true
+spring.jpa.show-sql=true 
+#test ?? true? ?? ???
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #??? swagger?? ? nullpointException? ???
